[package]
name = "ws-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features=["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0", default-features = false }
sha2 = "0.11.0"
