[project]
name = "ws-stress"
version = "0.1.0"
description = "WebSocket load generator for ws-rust (asyncio + websockets)"
requires-python = ">=3.11"
dependencies = [
    "websockets>=16.0",
]

[project.scripts]
ws-stress = "ws_stress.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ws_stress"]
